--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
+src/utils/connectionData.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
