--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@usedapp/core": "^0.6.3",
     "bootstrap": "^5.1.3",
     "ethers": "^5.5.1",
+    "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
